--- a/neuroevolution_of_augmenting_topologies_paper.tex
+++ b/neuroevolution_of_augmenting_topologies_paper.tex
@@ -42,7 +42,7 @@
 
   \title{Neuroevolution of Augmenting Topologies}
   \author{Paul Pauls\\
-          Advisor: -}
+          Advisor: Michael Adam}
   \markboth{Neuroevolution of Augmenting Topologies}{}
   \maketitle
 
