Add simple phenotypes and genome description

--- a/neuroevolution_of_augmenting_topologies_paper.tex
+++ b/neuroevolution_of_augmenting_topologies_paper.tex
@@ -83,6 +83,10 @@ A separate distinction can be made between methods that evolve the structure of 
 Evolutionary algorithms operate on genotypes. In neuroevolution, a genotype is mapped to a neural network phenotype that is evaluated on some task to derive its fitness.
 
 
+Phenotypes and Genomes in the context of Neuroevolution:
+Let's take the example of a giraffe population that has both long-necked and short-necked giraffes. These giraffes have different phenotypes (think visible features) because they have different genomes (think codes for life).
+
+
 
 % ######################################################################################################################
 
