--- a/neuroevolution_of_augmenting_topologies_paper.tex
+++ b/neuroevolution_of_augmenting_topologies_paper.tex
@@ -81,6 +81,8 @@ Neuroevolution is in competition with Gradient Descent. Around 2017 researchers 
 
 First methods using neuroevolution can be traced back to the 1980s and 1990s, where direct genetic algorithms were used to evolve the weights of fixed ANNs.\cite{cite05}
 
+The Gradient Descent (GD) methodology was invented about 30 years ago by Geoffrey Hinton and become a foundation of all modern research activities in the Deep Machine Learning (ML) 
+
 Neuroevolution, can be applied more broadly than traditional Machine Learning because it does not require a large set of correct input-output pairs. Instead, it only requires that a) the performance can somehow be measured over time, and b) the behaviour of the networks can be modified through evolution. \cite{cite05}
 
 Depending on the specific AI based solution, AutoML can be seen as neuroevolution. Google AI, for example, presented both a reinforcement learning approach as well as an evolutionary approach to find, i.e. generate, ANNs and refer to both of them as AutoML. \cite{cite05}
@@ -92,6 +94,14 @@ Inspired by biological neural networks, ANNs consist of many artificial neurons 
 The architecture of a network, i.e. how the neurons are connected to each other, plays a very important role in whether or not an ANN can be trained to successfully learn a task. Over the years, human experts carefully designed complex architectures such as the VGGNet, AlexNet, GoogleNet, ResNet and many more to achieve and often surpass human-level performance on many different tasks. However, there is no single architecture that is sufficient for all tasks, and therefore manually designing well performing ANNs is a very challenging, time consuming and complex task that requires knowledge and experience. A typical ten layer network, for example, can have ~10\^10 candidate networks. This makes it impractical to evaluate all combinations and select the best performing one. \cite{cite05}
 
 Consequently, a lot of effort is currently put into automating the process of finding good ANN architectures. Solving this requires answering many questions, such as i) how to design the components of the architecture, ii) how to put them together, and iii) how to set the hyperparameters. There are two different paradigms that caught people’s attention in approaching this problems, namely a) using artificial intelligence (AI) based search methods, and b) using evolutionary techniques to generate networks. The latter is referred to as neuroevolution and, similar to machine learning, is “… yet another example that old algorithms combined with modern amounts of computing can work surprisingly well” \cite{cite05}
+
+\subsubsection{Drawbacks of classical Approach to Deep Machine Learning}
+
+- The network topology must be fully hand-engineered before training starts and only connection weights encapsulate learned knowledge while the network topology remains the same.
+- As a result it may introduce oversaturated neural units which don not take part in the training/inference process but simply consuming computing resources
+- special methods must be applied to avoid sticking into local optima such as L1/L2-norm, dropout regularizations, etc
+- exploding or diminishing learning gradient issues during back/forward propagation
+- implemented solutions can generalize only in the narrow scope learned from provided training samples
 
 \subsection{Classification of Neuroevolution Algorithms}
 Conventional Neuroevolution:
@@ -247,16 +257,17 @@ Interesting substrates are the three dimensional cube(making CPPN six-dimensiona
     \url{www.example.com}
     
   \bibitem{cite02}
-  \url{https://towardsdatascience.com/neat-an-awesome-approach-to-neuroevolution-3eca5cc7930f}
+    \url{https://towardsdatascience.com/neat-an-awesome-approach-to-neuroevolution-3eca5cc7930f}
   
   \bibitem{cite03}
-  \url{https://towardsdatascience.com/hyperneat-powerful-indirect-neural-network-evolution-fba5c7c43b7b}
+    \url{https://towardsdatascience.com/hyperneat-powerful-indirect-neural-network-evolution-fba5c7c43b7b}
   
   \bibitem{cite04}
-  \url{https://towardsdatascience.com/introduction-to-evolutionary-algorithms-a8594b484ac}
+    \url{https://towardsdatascience.com/introduction-to-evolutionary-algorithms-a8594b484ac}
   
   \bibitem{cite05}
-  \url{https://www.inovex.de/blog/neuroevolution/}
+    \url{https://www.inovex.de/blog/neuroevolution/}
+  
 
 \end{thebibliography}
 
