--- a/neuroevolution_of_augmenting_topologies_paper.tex
+++ b/neuroevolution_of_augmenting_topologies_paper.tex
@@ -70,49 +70,50 @@
 
 % ######################################################################################################################
 
-\section{Overview}
+\section{Neuroevolution in General}
 
-most commonly applied in artificial life, general game playing and evolutionary robotics.
-main benefit is that Neuroevolution can be applied more widely than supervised learning algorithms [...] [as it] requires only a measure of a network's performance at a task
-
-Neuroevolution is in competition with Gradient Descent. Around 2017 researchers at Uber stated they had found that simple structural Neuroevolution algorithms were competitive with sophisticated modern industry-standard gradient-descent deep learning algorithms, in part because Neuroevolution was found to be less likely to get stuck in local minima
-
+% Begin with quote
+% Then introduce a first description of what Neuroevolution is. Then go over to the overview and motivation
 “Neuroevolution is a machine learning technique that applies evolutionary algorithms to construct artificial neural networks, taking inspiration from the evolution of biological nervous systems in nature.” - Scholarpedia
 
-First methods using neuroevolution can be traced back to the 1980s and 1990s, where direct genetic algorithms were used to evolve the weights of fixed ANNs.\cite{cite05}
 
-The Gradient Descent (GD) methodology was invented about 30 years ago by Geoffrey Hinton and become a foundation of all modern research activities in the Deep Machine Learning (ML) 
-
-Neuroevolution, can be applied more broadly than traditional Machine Learning because it does not require a large set of correct input-output pairs. Instead, it only requires that a) the performance can somehow be measured over time, and b) the behaviour of the networks can be modified through evolution. \cite{cite05}
-
-Depending on the specific AI based solution, AutoML can be seen as neuroevolution. Google AI, for example, presented both a reinforcement learning approach as well as an evolutionary approach to find, i.e. generate, ANNs and refer to both of them as AutoML. \cite{cite05}
-
-\subsection{Motivation}
-
-Inspired by biological neural networks, ANNs consist of many artificial neurons that are connected to each other. In a process, mostly referred to as training or learning, ANNs are optimised to solve specific, predefined tasks such as detecting faces. Learning is usually realised by employing a form of stochastic gradient descent (SGD) in order to change the network parameters in such a way that a future prediction for the same input is closer to the desired output. \cite{cite05}
-
+% Motivation
 The architecture of a network, i.e. how the neurons are connected to each other, plays a very important role in whether or not an ANN can be trained to successfully learn a task. Over the years, human experts carefully designed complex architectures such as the VGGNet, AlexNet, GoogleNet, ResNet and many more to achieve and often surpass human-level performance on many different tasks. However, there is no single architecture that is sufficient for all tasks, and therefore manually designing well performing ANNs is a very challenging, time consuming and complex task that requires knowledge and experience. A typical ten layer network, for example, can have ~10\^10 candidate networks. This makes it impractical to evaluate all combinations and select the best performing one. \cite{cite05}
-
 Consequently, a lot of effort is currently put into automating the process of finding good ANN architectures. Solving this requires answering many questions, such as i) how to design the components of the architecture, ii) how to put them together, and iii) how to set the hyperparameters. There are two different paradigms that caught people’s attention in approaching this problems, namely a) using artificial intelligence (AI) based search methods, and b) using evolutionary techniques to generate networks. The latter is referred to as neuroevolution and, similar to machine learning, is “… yet another example that old algorithms combined with modern amounts of computing can work surprisingly well” \cite{cite05}
 
-\subsubsection{Drawbacks of classical Approach to Deep Machine Learning}
-
+% further Drawbacks of classical ML Training, also serving as motivation
 - The network topology must be fully hand-engineered before training starts and only connection weights encapsulate learned knowledge while the network topology remains the same.
 - As a result it may introduce oversaturated neural units which don not take part in the training/inference process but simply consuming computing resources
 - special methods must be applied to avoid sticking into local optima such as L1/L2-norm, dropout regularizations, etc
 - exploding or diminishing learning gradient issues during back/forward propagation
 - implemented solutions can generalize only in the narrow scope learned from provided training samples
 
-\subsection{Classification of Neuroevolution Algorithms}
-Conventional Neuroevolution:
-evolve only the strength of the connection weights for a fixed network topology
 
-TWEANNs (Topology and Weight Evolving Artificial Neural Network):
-evolve both the topology of the network and its weights
+% Differentiate Neuroevolution roughly from traditional methods. Later clearly from traditional methods
+% Specify area of applicability
+Neuroevolution is most commonly applied in artificial life, general game playing and evolutionary robotics.
 
-Parallel or sequential Evolving:
-A separate distinction can be made between methods that evolve the structure of ANNs in parallel to its parameters and those that develop them separately
+Neuroevolution, can be applied more broadly than traditional Machine Learning because it does not require a large set of correct input-output pairs. Instead, it only requires that a) the performance can somehow be measured over time, and b) the behaviour of the networks can be modified through evolution. \cite{cite05}
 
+Neuroevolution is in competition with Gradient Descent. Around 2017 researchers at Uber stated they had found that simple structural Neuroevolution algorithms were competitive with sophisticated modern industry-standard gradient-descent deep learning algorithms, in part because Neuroevolution was found to be less likely to get stuck in local minima \cite{cite05}
+
+First methods using neuroevolution can be traced back to the 1980s and 1990s, where direct genetic algorithms were used to evolve the weights of fixed ANNs.\cite{cite05}
+
+Depending on the specific AI based solution, AutoML can be seen as neuroevolution. Google AI, for example, presented both a reinforcement learning approach as well as an evolutionary approach to find, i.e. generate, ANNs and refer to both of them as AutoML. \cite{cite05}
+
+Inspired by biological neural networks, ANNs consist of many artificial neurons that are connected to each other. In a process, mostly referred to as training or learning, ANNs are optimised to solve specific, predefined tasks such as detecting faces. Learning is usually realised by employing a form of stochastic gradient descent (SGD) in order to change the network parameters in such a way that a future prediction for the same input is closer to the desired output. \cite{cite05}
+
+
+% Classification of Neuroevolution Algorithms (Put examples to each classification: NEAT, HyperNEAT, CoDeepNEAT, AutoML)
+- Conventional Neuroevolution: Evolve only the strength of the connection weights for a fixed network topology
+- TWEANNs (Topology and Weight Evolving Artificial Neural Network): Evolve both the topology of the network and its weights
+- Parallel or sequential Evolving: A separate distinction can be made between methods that evolve the structure of ANNs in parallel to its parameters and those that develop them separately
+
+
+
+% ######################################################################################################################
+
+\section{Overview}
 
 \subsection{Genotypes and Direct/Indirect Encoding}
 The question of encoding comes from the question of how do we wish to represent individuals genetically in our algorithm. The way in which we encode our individuals lays out the path for how our algorithm will handle the key evolutionary processes: selection, mutation, and crossover (also known as recombination). Any encoding will fall into one of two categories, direct or indirect.
